--- a/WeSite.html
+++ b/WeSite.html
@@ -27,6 +27,8 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#portfolio">Our Services</a></li>
                     <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="index.html">RU</a></li>
+                    <li><a href="WeSite.html">ENG</a></li>
                 </ul>
             </nav>
         </div>
