--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                     <li><a href="#about">О нас</a></li>
                     <li><a href="#portfolio">Наши услуги</a></li>
                     <li><a href="#contact">Контакты</a></li>
+                    <li><a href="index.html">RU</a></li>
+                    <li><a href="WeSite.html">ENG</a></li>
                 </ul>
             </nav>
         </div>
