--- a/WeSite.html
+++ b/WeSite.html
@@ -197,10 +197,10 @@
             <h2>Contact Us</h2>
             <div class="contact-content">
                 <div class="contact-form">
-                    <form>
+                    <form action="https://formspree.io/f/xkgvpgkz"method="POST">
                         <div class="form-group">
                             <label for="name"> Name</label>
-                            <input type="text" id="name" placeholder="Введите ваше имя">
+                            <input type="email" id="name" placeholder="Введите ваше имя">
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
