--- a/WeSite.html
+++ b/WeSite.html
@@ -200,7 +200,7 @@
                     <form action="https://formspree.io/f/xkgvpgkz"method="POST">
                         <div class="form-group">
                             <label for="name"> Name</label>
-                            <input type="email" id="name" placeholder="Введите ваше имя">
+                            <input type="email" id="name" name="email" placeholder="Введите ваше имя">
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
@@ -208,7 +208,7 @@
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea id="message" placeholder="Введите ваше сообщение"></textarea>
+                            <textarea id="message" name="message" placeholder="Введите ваше сообщение"></textarea>
                         </div>
                         <button type="submit" class="btn">Send</button>
                     </form>
