--- a/WeSite.html
+++ b/WeSite.html
@@ -200,11 +200,11 @@
                     <form action="https://formspree.io/f/xkgvpgkz"method="POST">
                         <div class="form-group">
                             <label for="name"> Name</label>
-                            <input type="email" id="name" name="email" placeholder="Введите ваше имя">
+                            <input type="email" id="name" placeholder="Введите ваше имя">
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" id="email" placeholder="Введите ваш email">
+                            <input type="email" name="email" id="email" placeholder="Введите ваш email">
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
