--- a/WeSite.html
+++ b/WeSite.html
@@ -200,15 +200,15 @@
                     <form action="https://formspree.io/f/xkgvpgkz"method="POST">
                         <div class="form-group">
                             <label for="name"> Name</label>
-                            <input type="email" id="name" placeholder="Введите ваше имя">
+                            <input type="text" id="name" placeholder="Enter your name">
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="Введите ваш email">
+                            <input type="email" name="email" id="email" placeholder="Enter your email">
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea id="message" name="message" placeholder="Введите ваше сообщение"></textarea>
+                            <textarea id="message" name="message" placeholder="Enter your message"></textarea>
                         </div>
                         <button type="submit" class="btn">Send</button>
                     </form>
