--- a/index.html
+++ b/index.html
@@ -198,18 +198,18 @@
             <h2>Contact Us</h2>
             <div class="contact-content">
                 <div class="contact-form">
-                    <form>
+                    <form action="https://formspree.io/f/xkgvpgkz"method="POST">
                         <div class="form-group">
                             <label for="name"> Имя</label>
                             <input type="text" id="name" placeholder="Введите ваше имя">
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" id="email" placeholder="Введите ваш email">
+                            <input type="email" name="email" id="email" placeholder="Введите ваш email">
                         </div>
                         <div class="form-group">
                             <label for="message">Сообщение</label>
-                            <textarea id="message" placeholder="Введите ваше сообщение"></textarea>
+                            <textarea id="message" name="message" placeholder="Введите ваше сообщение"></textarea>
                         </div>
                         <button type="submit" class="btn">Отправить</button>
                     </form>
