--- a/index.html
+++ b/index.html
@@ -195,23 +195,23 @@
     <!-- Контакты -->
     <section class="contact" id="contact">
         <div class="container">
-            <h2>Contact Us</h2>
+            <h2>Контакы</h2>
             <div class="contact-content">
                 <div class="contact-form">
                     <form action="https://formspree.io/f/xkgvpgkz"method="POST">
                         <div class="form-group">
-                            <label for="name"> Имя</label>
-                            <input type="text" id="name" placeholder="Введите ваше имя">
+                            <label for="name"> Имя </label>
+                            <input type="text" id="name" placeholder="Введите ваше имя ">
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="Введите ваш email">
+                            <input type="email" name="email" id="email" placeholder="Введите ваш Email">
                         </div>
                         <div class="form-group">
-                            <label for="message">Сообщение</label>
+                            <label for="message">Message</label>
                             <textarea id="message" name="message" placeholder="Введите ваше сообщение"></textarea>
                         </div>
-                        <button type="submit" class="btn">Отправить</button>
+                        <button type="submit" class="btn">Send</button>
                     </form>
                 </div>
                 
