--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                             <input type="email" name="email" id="email" placeholder="Введите ваш Email">
                         </div>
                         <div class="form-group">
-                            <label for="message">Message</label>
+                            <label for="message">Сообщение</label>
                             <textarea id="message" name="message" placeholder="Введите ваше сообщение"></textarea>
                         </div>
                         <button type="submit" class="btn">Send</button>
