--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>GreenChain</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <meta property="og:image" content="./photo/GreanChai — копия.jpg" />
-  <link rel="icon" href="./photo/GreanChai — копия.jpg" />
+    <meta property="og:image" content="photo/GreanChai — копия.jpg"/>
+  <link rel="icon" href="photo/GreanChai — копия.jpg" />
 <style>
         /* Сброс стилей */
 
