--- a/WeSite.html
+++ b/WeSite.html
@@ -6,6 +6,8 @@
     <title>GreenChain</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="./css/main.css">
+     <meta property="og:image" content="photo/logo.png"/>
+    <link rel="icon" href="photo/logo.png" />
 <style>
         /* Сброс стилей */
 
